fixed tooltip positioning glitch on firefox

--- a/style.css
+++ b/style.css
@@ -617,19 +617,21 @@ h1 {
 	opacity: 1;
 	transition: all 0.2s;
 	transition-delay: 0.2s;
-	transform: translate(-60px,-70px);
+	/* transform: translateY(-70px); */
+	top:15px;
 }
 
 .tooltip {
+	top:20px;
 	transition: all 0.2s;
 	pointer-events: none;
 	opacity: 0;
 	color: rgb(0, 0, 0);
 	font-weight: 500;
 	position: absolute;
-	transform: translate(-60px,-65px);
+	transform: translate(-85px,-65px);
 	text-align: center;
-	width: 200px; 
+	width: 250px; 
 }
 .tooltip span {
 	background-color: rgb(255, 255, 255);
@@ -643,7 +645,7 @@ h1 {
 	border-radius: 3px;
 	width: 10px;
 	height: 10px;
-	left: 93px;
+	left: 117px;
 	top: 30px;
 	display: block;
 	position: relative;
